# telnet-sec

./: Cargo.toml  README.md  SECURITY.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: telnet_parser.rs
safe-telnet-parser/: Cargo.toml
safe-telnet-parser/src/: lib.rs  parser.rs
safe-telnet-parser/tests/: bad_sequences.rs  regression_user_flag_injection.rs
telnet-sanitizer/: Cargo.toml
telnet-sanitizer/examples/: live_server.rs  malicious_bytes.rs  strip_malicious_telnet.rs
telnet-sanitizer/src/: lib.rs  main.rs
