[package]
name = "safe-telnet-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
safe-telnet-parser = { path = "../safe-telnet-parser" }
telnet-sanitizer = { path = "../telnet-sanitizer" }

[[bin]]
name = "dummy"
path = "dummy.rs"
