[package]
name = "telnet-sanitizer"
version = "0.1.0"
edition = "2024"
description = "Telnet TCP proxy that sanitizes protocol input to mitigate CVE-class vulnerabilities"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/olatunbosunoyeleke94/telnet-sec"
keywords = ["telnet", "security", "proxy", "sanitizer", "cve"]
categories = ["network-programming", "security"]


[dependencies]
tokio = { version = "1", features = ["full"] }
safe-telnet-parser = "0.1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0.100"

[lib]
name = "telnet_sanitizer"
path = "src/lib.rs"

[[bin]]
name = "telnet-sanitizer"
path = "src/main.rs"
